--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,4 +4,18 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+### Well, this is awkward...
+
+It looks like you've stumbled upon a page that doesn't exist. Maybe it's hiding, maybe it never existed, or maybe it just took a day off.
+
+#### Here are a few things you could do instead:
+- [Go back to the homepage](/)
+- [Check out my latest blog posts](/posts)
+- [Read my essays](/essays)
+
+
+---
+
+
+Cheers,  
+Rishav
